--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
            
           <div>
              <h2>32 ℃</h2>
+             <h4>Clear</h4>
+             <h5>data</h5>
           </div>
         </div>
     </div> 
